--- a/web/index.html
+++ b/web/index.html
@@ -34,8 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    {{flutter_service_worker_version}}
-  </script>
+    const serviceWorkerVersion = null;  </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
@@ -43,7 +42,7 @@
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
-      _flutter.loader.load({
+      _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
